name:                ghc-proposal-hook-server
version:             0.1.0.0
synopsis:            GitHub hook server
-- description:         
homepage:            http://github.com/ghc-proposals/hook-server
license:             BSD3
license-file:        LICENSE
author:              Ben Gamari
maintainer:          ben@well-typed.com
-- copyright:           
category:            Web
build-type:          Simple
cabal-version:       >=1.10

executable proposal-mail
  main-is:             Main.hs
  -- other-modules:       
  other-extensions:    DataKinds, OverloadedStrings, TypeFamilies, TypeOperators
  build-depends:       base >=4.9 && <4.10,
                       bytestring >=0.10 && <0.11,
                       aeson >=1.0 && <1.1,
                       text >=1.2 && <1.3,
                       servant-server >=0.9 && <0.10,
                       wai >=3.2 && <3.3,
                       warp >=3.2 && <3.3,
                       servant-github-webhook >=0.3 && <0.4,
                       github >=0.15 && <0.16
  default-language:    Haskell2010
